[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Spawners/Spawnersalert.tres" type="Animation" id=1]
[ext_resource path="res://scripts/BossUpSpawner.gd" type="Script" id=2]
[ext_resource path="res://assets/alerts/alert1.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AlertPos/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="BossSpawner" type="Node2D"]
script = ExtResource( 2 )

[node name="SpawnPos" type="Position2D" parent="."]
position = Vector2( 0, -8 )
z_index = -1

[node name="AlertPos" type="Position2D" parent="."]
position = Vector2( 0, 8 )

[node name="Sprite" type="Sprite" parent="AlertPos"]
texture = ExtResource( 3 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/alert = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
